# CuRa

./: .gitignore  CMakeLists.txt  README.md  image.ppm
assets/textures/: checker.ppm  floor_diffuse.ppm
cmake/: config.cmake
include/cura/: buffer.h  camera.h  common.h  depth_shader.h  light.h  line.h  mat.h  math.h  mesh.h  model.h  normal_map_shader.h  pipeline.h  quad_shader.h  rasterizer.h  shader.h  texture.h  transforms.h  triangle.h  vec.h  vertex.h
scenes/01Triangle/: triangle.ppm
scenes/05PerspectiveCorrectInterpolation/: angled_triangle.ppm  with-perspective.ppm  without-perspective.ppm
source/: CMakeLists.txt  depth_shader.cpp  gourad_shader.cpp  main.cpp
source/include/: buffer.h  camera.h  depth_shader.h  gourad_shader.h  light.h  line.h  mat.h  math.h  mesh.h  model.h  normal_map_shader.h  pipeline.h  ppm_image.h  rasteriser.h  renderable.h  shader.h  texture.h  transforms.h  triangle.h  vec.h  vertex.h
src/: assignment01Triangle.cpp  main.cpp
src/01Triangle/: 01Triangle.cpp  01triangle.cpp  assignment01Triangle.cpp
src/02Mesh/: 02Mesh.cpp  depth_shader.cpp
src/02MeshParsing/: 02mesh_parsing.cpp
src/03BarycentricInterpolation/: 03barycentric_interpolation.cpp
src/04Transforms/: 04transformed_mesh.cpp
src/05PerspectiveCorrectInterpolation/: 05perspectivecorrectinterpolation.cpp
